@@ -258,6 +258,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   useful error message.
 * Uploading to a protected title will allow the user to choose a new name 
   instead of showing an error page
+* (bug 24425) Use Database::replace instead of delete/insert in SqlBagOStuff::set
+  to avoid query errors about duplicate keynames.
 
 === API changes in 1.17 ===
 * (bug 22738) Allow filtering by action type on query=logevent.
